--- a/style.css
+++ b/style.css
@@ -38,11 +38,12 @@ header {
     width: 150px;
     height: 150px;
     object-position: center;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 100%;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 100;
+    border: 5px outset black;
   }
 }
