--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  padding: 0;
   background-image: linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.466),
@@ -151,56 +152,72 @@ body {
   }
   main {
     #quote {
-      border-top: 3px solid rgba(255, 184, 127, 0.452);
-      border-bottom: 3px solid rgba(255, 184, 127, 0.452);
-      background-color: rgba(255, 115, 0, 0.342);
-      min-height: 80px;
-      box-shadow: 0px -1px 3px rgba(0, 0, 0, 0.322), 0px 10px 20px black;
       position: relative;
       z-index: 3;
       display: flex;
-      align-items: center;
+      flex-direction: column;
       justify-content: center;
+      min-height: 80px;
+      padding: 0 20px;
       color: black;
       font-size: 30px;
       font-family: "Tinos", serif;
       font-weight: 900;
+      background-color: rgba(255, 115, 0, 0.342);
+      border-top: 3px solid rgba(255, 184, 127, 0.452);
+      border-bottom: 3px solid rgba(255, 184, 127, 0.452);
+      box-shadow: 0px -1px 3px rgba(0, 0, 0, 0.322), 0px 10px 20px black;
+    }
+    #quote .quoteText {
+      display: block;
+      width: 100%;
+      font-style: italic;
+      font-weight: 300;
+      font-size: 24px;
+    }
+    #quote .name {
+      font-weight: 900;
+      text-align: right;
     }
     .parallax {
       position: relative;
       z-index: 2;
       width: 100%;
       height: 400px;
-      opacity: 0.8;
     }
     .p1 {
       background-attachment: fixed;
       background-size: cover;
-      background-image: url(imgs/img1.jpg);
+      background-image: linear-gradient(to bottom, gray, transparent, gray),
+        url(imgs/img1.jpg);
     }
     .p2 {
       background-attachment: fixed;
       background-size: cover;
       background-position: center;
-      background-image: url(imgs/img2.jpg);
+      background-image: linear-gradient(to bottom, gray, transparent, gray),
+        url(imgs/img2.jpg);
     }
     .p3 {
       background-attachment: fixed;
       background-size: cover;
       background-position: center;
-      background-image: url(imgs/img5.webp);
+      background-image: linear-gradient(to bottom, gray, transparent, gray),
+        url(imgs/img5.webp);
     }
     .p4 {
       background-attachment: fixed;
       background-size: cover;
       background-position: center;
-      background-image: url(imgs/img3.webp);
+      background-image: linear-gradient(to bottom, gray, transparent, gray),
+        url(imgs/img3.webp);
     }
     .p5 {
       background-attachment: fixed;
       background-size: cover;
       background-position: center;
-      background-image: url(imgs/img4.jpg);
+      background-image: linear-gradient(to bottom, gray, transparent, gray),
+        url(imgs/img4.jpg);
     }
     .heading {
       position: relative;
@@ -217,6 +234,10 @@ body {
       font-style: normal;
       color: black;
     }
+    .text {
+      position: relative;
+      display: inline-block;
+    }
     .text::before {
       content: "";
       position: absolute;
@@ -224,7 +245,7 @@ body {
       top: 50%;
       width: 50px;
       transform: translateY(-50%);
-      height: 2px;
+      height: 3px;
       background-color: black;
       mask-image: linear-gradient(
         45deg,
@@ -235,22 +256,86 @@ body {
     }
     .h-1 {
       text-align: left;
-    }
-    .h-1::before {
+      .text::before {
+        right: 0;
+        transform: translate(100%, -50%);
+      }
     }
     .h-2 {
       text-align: right;
+      .text::before {
+        left: 0;
+        transform: translate(-100%, -50%);
+        mask-image: linear-gradient(
+          -45deg,
+          transparent 30%,
+          white 30% 70%,
+          transparent 30%
+        );
+      }
     }
     .h-3 {
       text-align: left;
+      .text::before {
+        right: 0;
+        transform: translate(100%, -50%);
+      }
     }
     .h-4 {
       text-align: right;
+      .text::before {
+        left: 0;
+        transform: translate(-100%, -50%);
+        mask-image: linear-gradient(
+          -45deg,
+          transparent 30%,
+          white 30% 70%,
+          transparent 30%
+        );
+      }
     }
     .h-5 {
       text-align: left;
+      .text::before {
+        right: 0;
+        transform: translate(100%, -50%);
+      }
     }
   }
+  footer {
+    width: 100%;
+    height: 500px;
+    position: relative;
+    background-image: linear-gradient(
+      to bottom,
+      rgba(128, 128, 128, 0.9),
+      rgba(0, 0, 0, 0.9)
+    );
+    display: flex;
+    justify-content: center;
+    border-top: 5px outset rgb(197, 197, 197);
+    box-shadow: 0px 0px 20px var(--orange);
+    z-index: 5;
+    .section {
+      padding: 10px;
+      .links {
+        padding: 15px;
+        background: rgba(255, 255, 255, 0.4);
+        border-radius: 10px;
+        height: 100%;
+        border: 5px outset var(--orange);
+        box-shadow: 0px 0px 3px black;
+      }
+    }
+  }
+}
+.container-fluid {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+.row {
+  margin: 0 !important;
+  padding: 0 !important;
 }
 @keyframes moveBG {
   from {
