--- a/style.css
+++ b/style.css
@@ -325,6 +325,16 @@ body {
         height: 100%;
         border: 5px outset var(--orange);
         box-shadow: 0px 0px 3px black;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-family: "Yrsa", serif;
+        font-size: 22px;
+        a {
+          color: black;
+        }
       }
     }
   }
