--- a/style.css
+++ b/style.css
@@ -353,8 +353,11 @@ body {
             0px 7px,
             2px 50%,
             0px 3px,
-            calc(100% - 20px) 3px,
-            /*arrowhead*/ calc(100% - 20px) 7px,
+            calc(100% - 10px) 3px,
+            calc(100% - 12px) 0px,
+            100% 50%,
+            calc(100% - 12px) 100%,
+            calc(100% - 10px) 7px,
             0px 7px
           );
         }
