--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     ),
     url(imgs/bg.png);
   background-attachment: fixed;
-  background-size: 80;
+  background-size: 80px;
   --orange: rgb(255, 102, 0);
   --transOrange: rgba(255, 102, 0, 0.65);
   scroll-behavior: smooth;
@@ -228,16 +228,18 @@ body {
       border-bottom: 3px solid rgba(255, 184, 127, 0.452);
       background-color: rgba(255, 115, 0, 0.342);
       box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 1);
-      font-size: 40px;
-      padding: 0px 10px;
-      font-family: "Tinos", serif;
-      font-weight: 700;
+      padding: 10px 0px;
       font-style: normal;
       color: black;
     }
     .text {
+      font-family: "Tinos", serif;
+      font-size: 40px;
+      font-weight: 700;
       position: relative;
       display: inline-block;
+      margin-bottom: 10px;
+      padding: 0px 10px;
     }
     .text::before {
       content: "";
@@ -254,6 +256,29 @@ body {
         white 30% 70%,
         transparent 30%
       );
+    }
+    .text::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      width: 100vw;
+      left: 0;
+      background: black;
+      height: 1px;
+    }
+    .row {
+      padding: 0 !important;
+      margin: 0 !important;
+      .col-md-7 {
+        text-align: justify;
+        font-family: "Times New Roman", serif;
+        font-size: 20px;
+      }
+      img {
+        border-radius: 10px;
+        box-shadow: 0px 0px 5px black;
+        border: 3px solid var(--orange);
+      }
     }
     .h-1 {
       text-align: left;
@@ -458,11 +483,13 @@ body {
         text-shadow: 1px 1px rgb(59, 41, 32), -1px -1px rgb(120, 80, 55),
           0px 0px 10px rgb(255, 255, 255);
       }
-      .link, .toTop {
+      .link,
+      .toTop {
         cursor: pointer;
         transition: 0.25s;
       }
-      .link:hover, .toTop:hover {
+      .link:hover,
+      .toTop:hover {
         text-shadow: 0px 0px 2px var(--orange), -5px -5px 1px rgb(71, 48, 33),
           -5px -5px 2px var(--orange), -10px -10px 1px rgb(36, 25, 19),
           -10px -10px 2px var(--orange);
