--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ body {
       margin-bottom: 10px;
       padding: 0px 10px;
     }
-    .text::before {
+    .text.linkTo::before {
       content: "";
       position: absolute;
       display: block;
@@ -278,18 +278,37 @@ body {
         border-radius: 10px;
         box-shadow: 0px 0px 5px black;
         border: 3px solid var(--orange);
+        margin-top: 10px;
+      }
+      #majorsCollapse {
+        ul {
+          list-style-type: none;
+          font-family: "Yrsa", serif;
+          font-size: 24px;
+          li {
+            font-weight: 800;
+            ul {
+              list-style-type: "—  ";
+              li {
+                font-size: 20px;
+                font-style: italic;
+                font-weight: 500;
+              }
+            }
+          }
+        }
       }
     }
     .h-1 {
       text-align: left;
-      .text::before {
+      .text.linkTo::before {
         right: 0;
         transform: translate(100%, -50%);
       }
     }
     .h-2 {
       text-align: right;
-      .text::before {
+      .text.linkTo::before {
         left: 0;
         transform: translate(-100%, -50%);
         mask-image: linear-gradient(
@@ -299,17 +318,21 @@ body {
           transparent 30%
         );
       }
+      .text::after {
+        right: 0 !important;
+        left: auto !important;
+      }
     }
     .h-3 {
       text-align: left;
-      .text::before {
+      .text.linkTo::before {
         right: 0;
         transform: translate(100%, -50%);
       }
     }
     .h-4 {
       text-align: right;
-      .text::before {
+      .text.linkTo::before {
         left: 0;
         transform: translate(-100%, -50%);
         mask-image: linear-gradient(
@@ -318,6 +341,10 @@ body {
           white 30% 70%,
           transparent 30%
         );
+      }
+      .text::after {
+        right: 0 !important;
+        left: auto !important;
       }
     }
     .h-5 {
