--- a/style.css
+++ b/style.css
@@ -267,6 +267,7 @@ body {
       height: 1px;
     }
     .row {
+      text-align: justify !important;
       padding: 0 !important;
       margin: 0 !important;
       .col-md-7 {
@@ -279,12 +280,13 @@ body {
         box-shadow: 0px 0px 5px black;
         border: 3px solid var(--orange);
         margin-top: 10px;
+        margin-bottom: 10px;
       }
       #majorsCollapse {
         ul {
           list-style-type: none;
           font-family: "Yrsa", serif;
-          font-size: 24px;
+          font-size: 26px;
           li {
             font-weight: 800;
             ul {
@@ -295,6 +297,16 @@ body {
                 font-weight: 500;
               }
             }
+          }
+        }
+      }
+      #statisticsCollapse {
+        ul {
+          list-style-type: none;
+          li {
+            font-size: 20px;
+            font-style: italic;
+            font-weight: 500;
           }
         }
       }
