--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ body {
       border-bottom: 3px solid rgba(255, 184, 127, 0.452);
       background-color: rgba(255, 115, 0, 0.342);
       box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 1);
-      padding: 10px 0px;
+      padding: 10px 100px;
       font-style: normal;
       color: black;
     }
@@ -261,7 +261,7 @@ body {
       content: "";
       position: absolute;
       bottom: 0;
-      width: 100vw;
+      width: calc(100vw - 200px);
       left: 0;
       background: black;
       height: 1px;
@@ -309,6 +309,13 @@ body {
             font-weight: 500;
           }
         }
+      }
+      div[data-bs-toggle="collapse"] {
+        cursor: pointer;
+      }
+      iframe {
+        border-radius: 10px;
+        box-shadow: 0px 0px 0px 5px var(--orange), 0px 0px 10px black;
       }
     }
     .h-1 {
@@ -553,6 +560,15 @@ body {
   margin: 0 !important;
   padding: 0 !important;
 }
+.carousel-item {
+  width: 100%;
+  aspect-ratio: 3/1.6;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
 @keyframes moveBG {
   from {
     background-position: 0;
@@ -623,6 +639,13 @@ body {
   .stagger {
     padding: 0 !important;
   }
+  .heading {
+    padding-right: 50px !important;
+    padding-left: 50px !important;
+    .text::after {
+      width: calc(100vw - 100px) !important;
+    }
+  }
 }
 @media (max-width: 575px) {
   footer .section .links::before {
@@ -640,6 +663,13 @@ body {
     .stagger::before,
     .stagger::after {
       display: none;
+    }
+  }
+  .heading {
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+    .text::after {
+      width: 100vw !important;
     }
   }
 }
