--- a/style.css
+++ b/style.css
@@ -373,6 +373,18 @@ body {
         transform: translate(100%, -50%);
       }
     }
+    #clubs {
+      font-family: "Yrsa", serif;
+      font-size: 20px;
+      list-style-type: "—  ";
+      li {
+        font-weight: 600;
+      }
+    }
+    #clubsCollapse .col-12 {
+      margin: 0 !important;
+      padding: 0 !important;
+    }
   }
   footer {
     overflow-x: clip;
